# inkwap

./: Cargo.toml  LICENSE  README.md
examples/: demo.rs  render.rs  sandbox.rs  shader.wgsl
src/: application.rs  lib.rs  render.rs
src/canvas/: mod.rs  vertex.rs  view_style.rs
src/renderer/: mod.rs  settings.rs
src/renderer/mesh/: arc.rs  capsule.rs  line.rs  mod.rs
src/shader/: shader.wgsl
src/shapes/: elipses.rs  mod.rs  polygons.rs
