[package]
name = "inkwap"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.27"
wgpu = "0.14"
env_logger = "0.10"
log = "0.4"
cfg-if = "1.0.0"
pollster = "0.2.5"
lyon = "1.0.0"
fontdue = "0.7.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = { version = "2.1.1", optional = true }
thread_local = { version = "1.1.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
wgpu = { version = "0.13", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.58", features = [
    "BinaryType",
    "Blob",
    "Clipboard",
    "ClipboardEvent",
    "CompositionEvent",
    "console",
    "CssStyleDeclaration",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "Document",
    "DomRect",
    "DragEvent",
    "Element",
    "Event",
    "EventListener",
    "EventTarget",
    "ExtSRgb",
    "File",
    "FileList",
    "FocusEvent",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "InputEvent",
    "KeyboardEvent",
    "Location",
    "MediaQueryList",
    "MouseEvent",
    "Navigator",
    "Performance",
    "Storage",
    "Touch",
    "TouchEvent",
    "TouchList",
    "WebGl2RenderingContext",
    "WebglDebugRendererInfo",
    "WebGlRenderingContext",
    "WheelEvent",
    "Window",
] }
